change isVisible const elements to correct names to be identified cprrectly

--- a/Project code/style.css
+++ b/Project code/style.css
@@ -3,18 +3,6 @@ h1{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-svg{
-  font-size: 50px;
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 30px;
-  height: 30px;
-  fill: currentColor;
-}
-
 .searchBar{
   display: flex;
   flex-direction: column;
